[package]
name = "kvs"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
structopt = "0.3"
serde = "1.0"
rmp-serde = "0.14"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.1"
walkdir = "2.3"

# Building blocks 2
serde_json = "1.0"
ron = "0.5"
bson = "0.14"
