[package]
name = "kvs"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[[bin]]
name = "kvs"
required-features = ["app"]

[features]
app = ["anyhow", "structopt"]

[dependencies]
thiserror = "1.0"
serde = "1.0"
rmp-serde = "0.14"
# app deps
anyhow = { version = "1.0", optional = true }
structopt = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.1"
walkdir = "2.3"

# Building blocks 2
serde_json = "1.0"
ron = "0.5"
bson = "0.14"

# Building blocks 3
resp_serde = { git = "https://github.com/aquarhead/resp_serde" }
